--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body, html {height: 100%}
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
     <hr class="w3-border-black" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">Constact us: info@flowbridgecap.com</p>
+    <p class="w3-large w3-center">Contact us: info@flowbridgecap.com</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
     <p>FlowBridge @ 2023</p>
